# permit-ai-la

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Sprints_31-60_Year_2_Evolution.docx  docker-compose.test.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/airflow/dags/: ladbs_permit_poller.py  pcis_clearance_scan.py  zimas_cache_refresh.py
backend/alembic/versions/: 001_initial_schema.py  002_add_departments.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: admin.py  (+17 more)
backend/app/core/: backup.py  cache.py  database.py  events.py  monitoring.py  redis.py  s3.py
backend/app/ingestion/: __init__.py  eplanla_client.py  fims_client.py  loaders.py  pcis_scraper.py  socrata_client.py  transformers.py  zimas_client.py  zimas_loader.py
backend/app/middleware/: audit_middleware.py  auth.py  error_handler.py  logging.py  rate_limit.py  security.py
backend/app/models/: __init__.py  audit_log.py  base.py  clearance.py  document.py  inspection.py  notification.py  parcel.py  project.py  user.py
backend/app/schemas/: clearance.py  common.py  parcel.py  project.py  user.py
backend/app/scripts/: load_test.py
backend/app/services/: analytics_service.py  audit_service.py  chat_service.py  clearance_service.py  compliance_service.py  conflict_service.py  inspection_service.py  notification_service.py  pathfinder_service.py  project_service.py  report_service.py
backend/scripts/: enrich_overlays.py  fetch_hpoz.py  generate_clearances.py  ingest_live.py  ingest_overlays.py  ingest_socrata.py  load_hpoz_postgis.py  seed_reference_data.py  train_bottleneck_model.py
backend/tests/: conftest.py
backend/tests/data/: validation_addresses.json
(+163 files in other folders)
